[package]
name = "shred-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive", "alloc", "serde_derive"] }
wincode = { version = "0.1.1", features = ["derive"] }
bytes = "1.10"
bitflags = { version = "2.9.4", features = ["serde"] }
solana-signature = { version = "3.1.0", features = ["serde"] }
bytemuck = "1.24.0"
serde-big-array = "0.5"
